# argus

./: .env.example  .gitignore  .pre-commit-config.yaml  00d1d60c3cf42ff2_embeddings.json  0470b1d56830c3ec_embeddings.json  0616edddfec6afaf_embeddings.json  27b242c7d3cd5cfa_embeddings.json  295ec097be8a302a_embeddings.json  30002d3cadd44cd1_memory.json  333ba7f7b70277a7_embeddings.json  3883b5d82ad45313_embeddings.json  3ae29180935e8bd8_embeddings.json  4787dc0110f5ad71_embeddings.json  47884e4d68fd9ebd_embeddings.json  47dc46a9e17b39c9_embeddings.json  482e8e788dae5002_embeddings.json  4e583910e5a66e15_embeddings.json  59e596de7e64d8b8_embeddings.json  5ea62a6451dffcc8_embeddings.json  6de3679ba975bc61_embeddings.json  6ee3ce60cc218793_embeddings.json  70e216ae46c91058_embeddings.json  73474af3022022b5_embeddings.json  77d64c9641a247e9_embeddings.json  7c018d98278edc0c_embeddings.json  7f176fc78e8cca92_embeddings.json  8290bcf6aca35711_embeddings.json  882c44eab7762182_embeddings.json  91874ae9f81f8571_embeddings.json  94117f4110d32235_embeddings.json  969db58e2fddf484_embeddings.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  (+109 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: argus-index.yml  ci.yml  docker-publish.yml  pr-review.yml  release.yml  website.yml
docs/: architecture.md  style-guide.md
src/argus/application/: CLAUDE.md  dto.py  index_codebase.py  review_pull_request.py
src/argus/domain/: CLAUDE.md
src/argus/domain/context/: entities.py  repositories.py  services.py  value_objects.py
src/argus/domain/llm/: services.py  value_objects.py
src/argus/domain/memory/: repositories.py  services.py  value_objects.py
src/argus/domain/retrieval/: embeddings.py  ranker.py  services.py  strategies.py  value_objects.py
src/argus/domain/review/: entities.py  repositories.py  services.py  value_objects.py
src/argus/infrastructure/: CLAUDE.md  constants.py
src/argus/infrastructure/github/: client.py  pr_context_collector.py  publisher.py
src/argus/infrastructure/llm_providers/: factory.py
src/argus/infrastructure/memory/: llm_analyzer.py  outline_renderer.py
src/argus/infrastructure/parsing/: chunker.py  (+1 more)
src/argus/interfaces/: CLAUDE.md  action.py  bootstrap.py  config.py  env_utils.py  main.py  review_generator.py  sync_index.py  sync_push.py  toml_config.py
src/argus/shared/: CLAUDE.md  constants.py  exceptions.py  types.py  utils.py
tests/: CLAUDE.md
tests/integration/: conftest.py  test_action.py  test_config.py
tests/smoke/: test_providers.py
tests/unit/application/: test_dto.py  test_index_codebase.py  test_render_patterns.py  test_review_pull_request.py
tests/unit/interfaces/: test_config.py  test_env_utils.py  test_fetch_parallel.py  test_main.py  test_review_generator.py  test_sync_index.py  test_sync_push.py  test_toml_config.py
tests/unit/shared/: conftest.py  test_exceptions.py  test_types.py
website/: next.config.ts  package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
website/src/components/: CodeBlock.tsx  Features.tsx  Footer.tsx  GlassCard.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  PrivacySection.tsx  QuickSetup.tsx
website/src/content/: architecture.mdx  configuration.mdx  getting-started.mdx  how-review-works.mdx
website/src/lib/: mdx.ts
(+58 files in other folders)
