[project]
name = "argus"
version = "0.1.0"
description = "AI-powered pull request reviews that understand your codebase."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12",
    "pydantic-ai>=1.59",
    "httpx>=0.28",
    "tree-sitter>=0.25",
    "bm25s>=0.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-swift>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pyright>=1.1.408",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.3",
    "pre-commit>=4.5",
]

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

# =============================================================================
# Ruff
# =============================================================================

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "RET",    # flake8-return
    # "TC",   # flake8-type-checking — disabled, too aggressive with runtime imports
    "PTH",    # flake8-use-pathlib
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "TID",    # flake8-tidy-imports
    "RUF",    # ruff-specific
    "PT",     # flake8-pytest-style
    "N",      # pep8-naming
    "PIE",    # flake8-pie
]

[tool.ruff.lint.isort]
known-first-party = ["argus"]
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG", "D"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# =============================================================================
# Pyright
# =============================================================================

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
exclude = ["tests"]
reportMissingTypeStubs = false
reportUnknownMemberType = false

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=argus",
    "--cov-report=term-missing",
    "-v",
]
asyncio_mode = "auto"
markers = [
    "anthropic: requires ANTHROPIC_API_KEY",
    "openai: requires OPENAI_API_KEY",
    "local_llm: requires LOCAL_MODEL and LOCAL_BASE_URL",
]

[tool.coverage.run]
source = ["argus"]
omit = ["tests/*", "*/constants.py", "*/interfaces/action.py", "*/interfaces/bootstrap.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "Protocol",
    "@overload",
]
